tests/03-typecheck/04-if-else.sl
func test (string, bool) (string) in
    if "zero" else 1 fi
end
